--- a/YumFun/YumFun/View/Base.lproj/Main.storyboard
+++ b/YumFun/YumFun/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V7z-LN-XeG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -101,6 +101,71 @@
             </objects>
             <point key="canvasLocation" x="2540.579710144928" y="86.383928571428569"/>
         </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="DXS-i8-gOn">
+            <objects>
+                <tabBarController id="BFe-wj-vV0" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ozk-Ju-xHs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="uEp-PW-OK3" kind="relationship" relationship="viewControllers" id="Ah5-0v-YKT"/>
+                        <segue destination="BF6-Ne-d3P" kind="relationship" relationship="viewControllers" id="qih-SI-NX4"/>
+                        <segue destination="DpG-1J-KrK" kind="relationship" relationship="viewControllers" id="cym-xT-sqO"/>
+                        <segue destination="WEy-t6-pzq" kind="relationship" relationship="viewControllers" id="1io-j1-udN"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FBh-k5-kD3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1235" y="900"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="XCI-vG-BDz">
+            <objects>
+                <navigationController id="uEp-PW-OK3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discover" id="XHa-eM-DFq"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mAH-PC-bQo">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Dw4-lj-Lyk" kind="relationship" relationship="rootViewController" id="iXl-1a-WFa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pkB-Qf-0Vm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-197" y="1659"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wGA-z5-BfC">
+            <objects>
+                <viewController id="Dw4-lj-Lyk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qT1-6Z-xj2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discover View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Twi-bD-3oz">
+                                <rect key="frame" x="153" y="437.5" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Js7-8K-bfp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Twi-bD-3oz" firstAttribute="centerX" secondItem="qT1-6Z-xj2" secondAttribute="centerX" id="eHP-IW-dY8"/>
+                            <constraint firstItem="Twi-bD-3oz" firstAttribute="centerY" secondItem="qT1-6Z-xj2" secondAttribute="centerY" id="hN7-fT-yR6"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="CXe-nN-0j9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QTm-Lf-Eeh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-197" y="2396"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="jQL-K6-6ln">
             <objects>
@@ -136,6 +201,143 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N1r-XV-0Td" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-197.10144927536234" y="93.75"/>
+        </scene>
+        <!--Me-->
+        <scene sceneID="kVz-ED-oLt">
+            <objects>
+                <navigationController id="BF6-Ne-d3P" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Me" id="mOp-zu-bzZ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sSW-2r-tbs">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Cxb-Po-3gO" kind="relationship" relationship="rootViewController" id="sBU-SD-PfW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g9J-ug-rdN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="746" y="1659"/>
+        </scene>
+        <!--Create-->
+        <scene sceneID="TTT-hs-SFY">
+            <objects>
+                <navigationController id="DpG-1J-KrK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Create" id="6zb-Kq-6ud"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cmg-MZ-8jY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="bKV-Tk-hz9" kind="relationship" relationship="rootViewController" id="WMV-Wd-pb1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EQA-bn-5b3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="1659"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hx5-Y9-S8R">
+            <objects>
+                <viewController id="Cxb-Po-3gO" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OUd-Ug-IKH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThS-F8-xQn">
+                                <rect key="frame" x="162" y="437.5" width="90" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="6db-Jc-B1q"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ThS-F8-xQn" firstAttribute="centerX" secondItem="OUd-Ug-IKH" secondAttribute="centerX" id="AHe-d3-pf1"/>
+                            <constraint firstItem="ThS-F8-xQn" firstAttribute="centerY" secondItem="OUd-Ug-IKH" secondAttribute="centerY" id="UnO-Z3-peS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="xQN-SN-wo4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Z5-UE-fgu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="745" y="2396"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VLV-Lp-H0a">
+            <objects>
+                <viewController id="bKV-Tk-hz9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ynp-VF-acT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Maker View" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ri-SK-Udz">
+                                <rect key="frame" x="135" y="438" width="144.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0Ge-Mn-wJy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4ri-SK-Udz" firstAttribute="centerX" secondItem="Ynp-VF-acT" secondAttribute="centerX" id="8lT-A2-M9f"/>
+                            <constraint firstItem="4ri-SK-Udz" firstAttribute="centerY" secondItem="Ynp-VF-acT" secondAttribute="centerY" id="va2-MN-kVg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="wpU-AZ-y7g"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ltd-cV-7TC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1715.9420289855075" y="2395.9821428571427"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="dLe-gl-BY9">
+            <objects>
+                <navigationController id="WEy-t6-pzq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" id="YOj-Oc-oeG"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kuC-P7-gTg">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Q5u-K6-JEN" kind="relationship" relationship="rootViewController" id="AOX-Xg-1Ep"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rug-Cj-n53" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2767" y="1659"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="KoJ-oX-v1k">
+            <objects>
+                <viewController id="Q5u-K6-JEN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YxO-d3-ZM4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search View(maybe position as a subview of discoverview)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7IP-hj-icA">
+                                <rect key="frame" x="91" y="375" width="232" height="146"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="o6A-u3-JdQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7IP-hj-icA" firstAttribute="top" secondItem="o6A-u3-JdQ" secondAttribute="top" constant="287" id="9sF-fa-o6Q"/>
+                            <constraint firstItem="7IP-hj-icA" firstAttribute="centerX" secondItem="YxO-d3-ZM4" secondAttribute="centerX" id="LfH-OK-4jp"/>
+                            <constraint firstItem="7IP-hj-icA" firstAttribute="leading" secondItem="o6A-u3-JdQ" secondAttribute="leading" constant="91" id="jHb-0x-leD"/>
+                            <constraint firstItem="7IP-hj-icA" firstAttribute="centerY" secondItem="YxO-d3-ZM4" secondAttribute="centerY" id="zHn-Mm-hX2"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Rdd-0d-6rm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="64T-Ek-xW4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2766.666666666667" y="2395.9821428571427"/>
         </scene>
     </scenes>
     <resources>
