--- a/YumFun/YumFun/Views/Tests/FirestoreTest.storyboard
+++ b/YumFun/YumFun/Views/Tests/FirestoreTest.storyboard
@@ -122,6 +122,13 @@
                                     <action selector="fetchAllButtonTapped:" destination="0AW-Ot-P7v" eventType="touchUpInside" id="2ad-Re-K9Y"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtb-bZ-2Dv">
+                                <rect key="frame" x="109.5" y="399" width="195" height="30"/>
+                                <state key="normal" title="Update First Recipe in Cloud"/>
+                                <connections>
+                                    <action selector="updateButtonTapped:" destination="0AW-Ot-P7v" eventType="touchUpInside" id="QKI-eA-ydP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hbV-wA-jEd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -131,7 +138,9 @@
                             <constraint firstItem="Sik-WS-ARl" firstAttribute="top" secondItem="YfY-p7-5U7" secondAttribute="bottom" constant="10" id="8fn-a9-yuW"/>
                             <constraint firstItem="hbV-wA-jEd" firstAttribute="trailing" secondItem="vU0-7j-IRS" secondAttribute="trailing" constant="20" id="CUC-fz-BMK"/>
                             <constraint firstItem="Sik-WS-ARl" firstAttribute="centerX" secondItem="G7b-zA-8pU" secondAttribute="centerX" id="Kje-d3-aaT"/>
+                            <constraint firstItem="Mtb-bZ-2Dv" firstAttribute="centerX" secondItem="G7b-zA-8pU" secondAttribute="centerX" id="ZRE-ea-ww4"/>
                             <constraint firstItem="YfY-p7-5U7" firstAttribute="top" secondItem="Gv3-8E-Fof" secondAttribute="bottom" constant="10" id="d3x-2n-GyP"/>
+                            <constraint firstItem="Mtb-bZ-2Dv" firstAttribute="top" secondItem="Sik-WS-ARl" secondAttribute="bottom" constant="10" id="ern-Nh-JVh"/>
                             <constraint firstItem="vU0-7j-IRS" firstAttribute="leading" secondItem="hbV-wA-jEd" secondAttribute="leading" constant="20" id="i31-cF-Zpg"/>
                             <constraint firstItem="vU0-7j-IRS" firstAttribute="top" secondItem="hbV-wA-jEd" secondAttribute="top" constant="15" id="oTR-r7-NMo"/>
                             <constraint firstItem="Gv3-8E-Fof" firstAttribute="top" secondItem="vU0-7j-IRS" secondAttribute="bottom" constant="20" id="xKq-ui-sbE"/>
